# parabellum

./: .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  LICENCE  README.md  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: keep_a_changelog.yml  linting.yml  release.yml  test.yml
src/: __init__.py
src/parabellum/: config.py  constants.py  io.py  main.py  pipeline.py  processors.py  rules_engine.py
src/paraphrase/: constants.py  exceptions.py  io.py  main.py  processors.py  rules_engine.py
test-data/: normal_values.yaml  rules.yaml
tests/: conftest.py  test_basic.py  test_io_tsv.py  test_processors.py  test_rules_engine.py  test_rules_not_empty.py
